--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
 				<div class="container">
 					<div class="text-holder">
 						<strong class="heading-text">Data Providers</strong>
-						<p>The UN Biodiversity Lab would not be possible without the support provided by the data providers below. If you are interested in contributing data, follow this link <a href="https://www.mapx.org/join-us" target="_blank" title="Submit data">here</a> to send us a data submission form.</p>
+						<p>The UN Biodiversity Lab would not be possible without the support provided by the data providers below. If you are interested in contributing data, follow <a href="https://www.mapx.org/join-us" target="_blank" title="Submit data">this link</a> to send us a data submission form.</p>
 					</div>
 					<ul class="logo-list">
 						<li>
